fixed wrap resposiveness

--- a/src/components/Slider/slider.css
+++ b/src/components/Slider/slider.css
@@ -1,7 +1,7 @@
 
 .slide-image{
     max-width:100%;
-    max-height: 600px;
+    max-height: 480px;
     height: auto;
   }
   
